--- a/test/test.html
+++ b/test/test.html
@@ -7,7 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">    
 </head>
 <body>
+    <div>test</div>
+    <ul id="test-id" class="test-class">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
     <script src="../src/log.js"></script>
+    <script src="../src/parse.js"></script>    
     <script src="test.js"></script>
 </body>
 </html>
