继续完善解析器，添加辅助函数功能。完成解析 html 节点

--- a/test/test.html
+++ b/test/test.html
@@ -16,6 +16,7 @@
     </ul>
     <script src="../src/log.js"></script>
     <script src="../src/parse.js"></script>
+    <script src="../src/analysis.js"></script>
     <script src="test.js"></script>
 </body>
 </html>
