添加解析器功能

--- a/test/test.html
+++ b/test/test.html
@@ -9,11 +9,15 @@
 <body>
     <div>test</div>
     <ul id="test-id" class="test-class">
+        文本标题
         <li>1</li>
         <li>2</li>
         <li>3</li>
         <li>4</li>        
     </ul>
+    <div>
+        <span>sds</span>
+    </div>
     <script src="../src/log.js"></script>
     <script src="../src/parse.js"></script>
     <script src="../src/analysis.js"></script>
