--- a/test/index.html
+++ b/test/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Mocha</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mocha.css" />
-  </head>
-  <body>
-    <div id="mocha"></div>
-    <script src="mocha.js"></script>
-    <script>mocha.setup('bdd');</script>
-    <script src="http://chaijs.com/chai.js"></script>
-    <!-- <script src="../node_modules/babel-core/browser.js"></script> -->
-    <script src="../src/log.js"></script>
-    <script src="../src/parse.js"></script>    
-    <script src="../src/analysis.js"></script>    
-    <script src="tests.js"></script>     
-    <script>
-      mocha.run();
-    </script>
-  </body>
+
+<head>
+	<title>Mocha</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="mocha.css" />
+</head>
+
+<body>
+	<div id="mocha"></div>
+	<div id="app">
+		<span>{{title}}</span>
+		<br>
+		<span>{{message}}</span>
+		<br>
+		<span>{{message}}</span>
+		
+	</div>
+	<script src="mocha.js"></script>
+	<script>mocha.setup('bdd');</script>
+	<script src="http://chaijs.com/chai.js"></script>
+	<!-- <script src="../node_modules/babel-core/browser.js"></script> -->
+	<script src="../src/log.js"></script>
+	<script src="../src/welement.js"></script>	
+	<script src="../src/parse.js"></script>
+	<!-- <script src="../src/analysis.js"></script> -->
+	<script src="tests.js"></script>
+	<script>
+		mocha.run();
+	</script>
+</body>
+
 </html>
