优化单向绑定代码

--- a/test/index.html
+++ b/test/index.html
@@ -16,13 +16,15 @@
 		<span>{{message}}</span>
 		<br>
 		<span>{{message}}</span>
-		
+		<br>
+		<input type="text" w-bothway="{{tip}}">
 	</div>
 	<script src="mocha.js"></script>
 	<script>mocha.setup('bdd');</script>
 	<script src="http://chaijs.com/chai.js"></script>
 	<!-- <script src="../node_modules/babel-core/browser.js"></script> -->
 	<script src="../src/log.js"></script>
+	<script src="../src/util.js"></script>
 	<script src="../src/welement.js"></script>	
 	<script src="../src/parse.js"></script>
 	<!-- <script src="../src/analysis.js"></script> -->
