--- a/test/index.html
+++ b/test/index.html
@@ -25,9 +25,10 @@
 	<!-- <script src="../node_modules/babel-core/browser.js"></script> -->
 	<script src="../src/log.js"></script>
 	<script src="../src/util.js"></script>
-	<script src="../src/welement.js"></script>	
+    <script src="../src/welement.js"></script>
+    <script src="../src/notify.js"></script>    
 	<script src="../src/parse.js"></script>
-	<!-- <script src="../src/analysis.js"></script> -->
+	<script src="../src/analysis.js"></script>
 	<script src="tests.js"></script>
 	<script>
 		mocha.run();
