同步工作代码

--- a/test/index.html
+++ b/test/index.html
@@ -12,12 +12,12 @@
 	<div id="mocha"></div>
 	<div id="app">
 		<span>{{title}}</span>
-		<br>
+        <br>
 		<span>{{message}}</span>
 		<br>
 		<span>{{message}}</span>
 		<br>
-		<input type="text" w-bothway="{{tip}}">
+		<input type="text" w-bothway="tip">
 	</div>
 	<script src="mocha.js"></script>
 	<script>mocha.setup('bdd');</script>
