--- a/test/index.html
+++ b/test/index.html
@@ -17,12 +17,15 @@
 		<br>
 		<span>{{message}}</span>
 		<br>
-		<input type="text" w-bothway="tip">
-	</div>
+        <input type="text" w-bothway="tip" class="input">
+        <input type="text" w-bothway="tip">        
+        <br>        
+    </div>
+    
 	<script src="mocha.js"></script>
 	<script>mocha.setup('bdd');</script>
 	<script src="http://chaijs.com/chai.js"></script>
-	<!-- <script src="../node_modules/babel-core/browser.js"></script> -->
+    <!-- <script src="../node_modules/babel-core/browser.js"></script> -->    
 	<script src="../src/log.js"></script>
 	<script src="../src/util.js"></script>
     <script src="../src/welement.js"></script>
