把解析 dom 部分抽出来

--- a/test/index.html
+++ b/test/index.html
@@ -27,7 +27,8 @@
 	<script src="http://chaijs.com/chai.js"></script>
     <!-- <script src="../node_modules/babel-core/browser.js"></script> -->    
 	<script src="../src/log.js"></script>
-	<script src="../src/util.js"></script>
+    <script src="../src/util.js"></script>
+    <script src="../src/interpret.js"></script>    
     <script src="../src/welement.js"></script>
     <script src="../src/notify.js"></script>    
 	<script src="../src/parse.js"></script>
