--- a/test/index.html
+++ b/test/index.html
@@ -17,22 +17,18 @@
 		<br>
 		<span>{{message}}</span>
 		<br>
-        <input type="text" w-bothway="tip" class="input">
-        <input type="text" w-bothway="tip">        
+        <input type="text" w-on:click="showTip" class="input">        
         <br>        
     </div>
     
 	<script src="mocha.js"></script>
 	<script>mocha.setup('bdd');</script>
-	<script src="http://chaijs.com/chai.js"></script>
+	<!-- <script src="http://chaijs.com/chai.js"></script> -->
     <!-- <script src="../node_modules/babel-core/browser.js"></script> -->    
 	<script src="../src/log.js"></script>
     <script src="../src/util.js"></script>
     <script src="../src/interpret.js"></script>    
-    <script src="../src/welement.js"></script>
-    <script src="../src/notify.js"></script>    
-	<script src="../src/parse.js"></script>
-	<script src="../src/analysis.js"></script>
+    <script src="../src/welement.js"></script>    		
 	<script src="tests.js"></script>
 	<script>
 		mocha.run();
